- Fix checkout page generation on first install
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/plugins/pro-sites@4274 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/pro-sites-files/css/checkout.css
+++ b/pro-sites-files/css/checkout.css
@@ -95,6 +95,9 @@ table#psts_checkout_grid {
 }
 #psts_checkout_grid tr td.opt-current {
 }
+#psts_checkout_grid label {
+	cursor: pointer;
+}
 
 #pypl_cancel {
   margin-left: 25px;
@@ -227,4 +230,9 @@ label.cc-image img {
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#B5B5B5',GradientType=0 ); /* ie */
   border: 1px solid #CCCCCC;
   color: #000;
+}
+
+/* hides screen reader accessibility fields */
+#psts_checkout_grid .psts-radio {
+	display: none;
 }
