--- a/pro-sites-files/css/checkout.css
+++ b/pro-sites-files/css/checkout.css
@@ -98,7 +98,7 @@ table#psts_checkout_grid {
 #psts_checkout_grid label {
 	cursor: pointer;
 }
-#psts_checkout_grid #psts-free-option {
+#psts_checkout_grid #psts-free-option, #psts_checkout_grid #psts-bulk-option {
 	display: block;
 	width: 95%;
 	text-decoration: none;
