- Add ability for admins or user to resend an email receipt via manage/checkout page - Add styled upgrade button to admin bar (replaces old menu item) - Add pro status/manage link to admin bar for Super Admins - Fix wrong coupon discount amounts for Stripe checkouts - Fix error handling bug for Stripe gateway - Adjust response codes returned for non prosites IPNs: http://premium.wpmudev.org/forums/topic/paypal-ipn-problem - Add PSTS_CANCEL_LAST define that can be put in wpconfig to show cancel button at bottom of checkout form - Add wpcache support for the Supporter Ads module
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/plugins/pro-sites@5998 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/pro-sites-files/css/checkout.css
+++ b/pro-sites-files/css/checkout.css
@@ -1,4 +1,5 @@
 /* Default Pro Site Checkout page css */
+#psts-receipt-change small { font-size: 70%; }
 table#psts_checkout_grid {
 	margin-bottom: 5px;
 }
@@ -111,7 +112,7 @@ table#psts_checkout_grid {
 	float: right;
 }
 
-#psts-coupon-msg, #psts-complete-msg {
+#psts-coupon-msg, #psts-complete-msg, .psts-updated {
 	-moz-border-radius: 3px;
 	-khtml-border-radius: 3px;
 	-webkit-border-radius: 3px;
