Add filter/action hooks to the CC form processing. Check user has edit permissions for one blog before loading checkout.
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/plugins/pro-sites@8231 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/pro-sites-files/css/checkout.css
+++ b/pro-sites-files/css/checkout.css
@@ -199,7 +199,7 @@ label.cc-image img {
     color: #373737;
 }
 
-#psts-cc-checkout input[type="text"], #psts-cc-checkout input[type="password"], #psts-cc-checkout select {
+#psts-cc-checkout input[type="text"], #psts-cc-checkout input[type="email"], #psts-cc-checkout input[type="password"], #psts-cc-checkout select {
   background: none repeat scroll 0 0 #F9F9F9;
   border: 1px solid #CCCCCC;
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1) inset;
