- Improve directions in quota module
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/plugins/pro-sites@10773 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/pro-sites-files/css/checkout.css
+++ b/pro-sites-files/css/checkout.css
@@ -241,3 +241,10 @@ label.cc-image img {
 #psts_checkout_grid .psts-radio {
 	display: none;
 }
+
+#psts-manual-textarea {
+	width: 100%;
+}
+#psts-manual-submit {
+	float: right;
+}
