Fixes for Buddypress, Paypal Direct

--- a/pro-sites-files/css/checkout.css
+++ b/pro-sites-files/css/checkout.css
@@ -270,3 +270,9 @@ label.cc-image img {
 #psts-manual-submit {
 	float: right;
 }
+/** Stripe Checkout  **/
+#psts-stripe-checkout img.accepted-cards {
+    margin-top: 5px;
+    max-height: 32px;
+    width: auto;
+}
