Initial implementation of sortable levels.
Sorting levels now work. A few things to note:

* The order they appear in the list is the level they have.
* Module settings will use levels according to level number, not name.
E.g. If 'ULTIMATE' was previously used and now 'PLUS' is in its place
all settings previously assigned to 'ULTIMATE' will now apply to
'PLUS'.

@todo Delete button will delete the last level (the state before the
list is saved).  Add Delete buttons for each level except the first.

--- a/pro-sites-files/css/psts-admin.css
+++ b/pro-sites-files/css/psts-admin.css
@@ -893,3 +893,18 @@ input[name="uses"] {
 select.chosen {
     min-width: 150px;
 }
+
+#prosites-level-list .ui-sortable-handle:hover > td:first-child {
+    border-left: 3px solid rgba( 57, 57, 57, 0.6 );
+}
+
+#prosites-level-list .ui-sortable-handle:hover,
+#prosites-level-list .ui-sortable-handle:hover > td {
+    cursor: move;
+}
+
+#prosites-level-list .prosite-level-placeholder {
+    height: 46px;
+    line-height: 1.2em;
+    background: rgba( 57,57,57, 0.1);
+}
