Fixing JS/Delete buttons/Stripe plans issue.
Delete button now applies to any level, not just removing the last.

JS was deleting the button before code got to fully execute.

Fatal errors occured with Stripe activated, but no API credentials
given.

--- a/pro-sites-files/css/psts-admin.css
+++ b/pro-sites-files/css/psts-admin.css
@@ -908,3 +908,8 @@ select.chosen {
     line-height: 1.2em;
     background: rgba( 57,57,57, 0.1);
 }
+
+.save_levels_dirty {
+    padding: 0 10px;
+    color: #cc0000;
+}
